--- a/main/app_status.json
+++ b/main/app_status.json
@@ -1,5 +1,5 @@
 {
-  "status": "RUNNING",
+  "status": "DISABLED",
   "version": "1.0.0",
   "message": "App working fine. Next update in August."
 }
