--- a/main/app_status.json
+++ b/main/app_status.json
@@ -1,5 +1,5 @@
 {
-  "status": "RUNNING",
+  "status": "error",
   "version": "1.0.0",
-  "message": "App Server Running Well."
+  "message": "Not Authorised to Use."
 }
