--- a/main/app_status.json
+++ b/main/app_status.json
@@ -1,5 +1,5 @@
 {
-  "status": "error",
-  "version": "1.0.0",
+  "status": "RUNNING",
+  "version": "1.1.0",
   "message": "Not Authorised to Use."
 }
